# comp_net_lab

./: CMakeLists.txt  README.md
assignment1/q1/: q1_runner.sh
assignment1/q4/: q4.c  q4.out
assignment2/q1/: generator.cpp  verifier.cpp
lab_1/q1/: q1.c
lab_1/q2/: q2.c  q2.out
lab_1/q3/: q3.c  q3.out
